sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: Boolean does not take parameters
      	echange(i, i+1)
               ^